# bake-tracker

./: .editorconfig  .flake8  .gitignore  AGENTS.md  BakeTracker.spec  CHANGELOG.md  CLAUDE.md  CONTINUITY.md  CONTRIBUTING.md  CURRENT_STATE_AND_NEXT_STEPS.md  CURSOR_REVIEW_PROMPT.md  EXPORT_SCRIPT_STATUS.md  F026_temp.md  GEMINI.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  SPEC-KITTY-DIAGNOSTIC.md  TESTING_GUIDE.txt  dev.bat  install-dev-mode.bat  pyproject.toml  pytest.ini  requirements.md  requirements.txt  run-tests.sh  run.bat  run.py  setup-worktree.sh  setup.py  td001_backup.json
.cursor/: README.md  WORKFLOW.md
.kittify/: command-skills-manifest.json  config.yaml  metadata.yaml  skills-manifest.json  templates
docs/: ANALYSIS_CONFIGURATION_GAPS.md  ARCHITECTURE.md  AUDIT_SUMMARY_2025-11-16.md  DATA_WORKFLOW.md  DEVELOPMENT_STATUS.md  FEATURE_GAP_ANALYSIS_AND_ROADMAP.md  PACKAGING_OPTIONS.md  PAUSE_POINT.md  PHASE1_PLAN.md  REFACTOR_PRODUCT_PANTRY.md  REFACTOR_STATUS.md  REORGANIZATION_SUMMARY.md  SCHEMA.md  Spec-kitty errors.md  TD-001-schema-cleanup-prompt.md  USER_GUIDE.md  User testing.md  configuration_guidance.md  current_priorities.md  cursor_WP01-6_review.md  cursor_WP02_review.md  cursor_WP03_review.md  cursor_review_fixes.md  development_status.md  development_workflow.md  enhanced_data_import.md  feature_019_unit_simplification.md  feature_proposal_catalog_import.md  feature_roadmap.md  feature_roadmap_UPDATED.md  fix_summary.md  import_export_specification.md  ingredient_data_model_spec.md  packaging_options.md  planning-ui-layout-diagram.md  planning-ui-redesign-dropdown-2026-01-29.md  planning-ui-refactor-2026-01-29.md  requirements.md  spec-kitty_abandon_feature_steps.md  ui_migration_guide.md  (+3 more)
examples/: README.md  test_data.json  test_data_v2.json  test_data_v2_original.json
feedback/: spec-kitty-cursor-agent-issues.md  spec-kitty-symlink-merge-bug.md  spec-kitty-template-cli-mismatch.md  suspected-agents-md-symlink-issue.md
scripts/: consolidate_ingredients.py  create_ea_finished_units_for_cakes.py  create_finished_units_from_recipes.py  fix_bare_fg_compositions.py  generate_bare_finished_goods.py  get_categories.py  (+14 more)
(+3861 files in other folders)
